fix: center align splash screen content

--- a/web/style.css
+++ b/web/style.css
@@ -1,16 +1,18 @@
 .center {
-  width: 600px;
+  /* width: 600px;
   height: 500px;
-  position: absolute; /*Can also be `fixed`*/
   left: 30%;
-  /* right: 0; */
   top: 30%;
-  /* bottom: 0; */
   margin: auto;
-  /*Solves a problem in which the content is being cut when the div is smaller than its' wrapper:*/
   max-width: 100%;
-  max-height: 100%;
+  color: #000;
   overflow: auto;
+  */
+  display: flex;
+  justify-content: center;
+  min-height: 100vh;
+  align-items: center;
+  flex-direction: column;
 }
 
 .loader {
@@ -18,7 +20,6 @@
   border-top: 8px solid #f54242; /* Red */
   border-radius: 50%;
   width: 60px;
-  margin: auto;
   height: 60px;
   animation: spin 2s linear infinite;
 }
